# claude-panel

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo_space.py  mcp-servers.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  screensaver_idea.yml
.github/workflows/: ci.yml
demo/: README.md  hero.tape  install.tape  screensavers.tape  simulate-session.py  social-preview.html
hooks/: hooks.json
hooks/scripts/: curator.sh  nudge.sh  review-poller.sh  session-end.sh  session-start.sh
src/claude_panel/: constants.py  curator.py  curator_daemon.py  reviews.py  server.py  session.py  viewer.py
src/claude_panel/screensavers/: ann-arbor.py  aurora.py  banquet.py  citadel.py  city-lights.py  coffee-shop.py  derelict.py  dvd-bounce.py  labyrinth.py  matrix.py  neon-dreams.py  neon-street.py  noir.py  rain-city.py  retro-terminal.py  roku-city.py  sea-life.py  sea-sunset.py  space-flight.py  star-wars.py  synthwave.py  tokyo-drift.py
tests/: test_curator_state.py  test_parse_markdown.py  test_reviews.py  test_session.py
