[project]
name = "claude-panel"
version = "0.4.0"
description = "Persistent context panel for Claude Code — MCP server + Textual TUI viewer"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "textual>=3.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
claude-panel-server = "claude_panel.server:main"
claude-panel = "claude_panel.viewer:main"

[dependency-groups]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-p", "no:warnings", "--cov=claude_panel", "--cov-report=term-missing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
